[project]
name = "directory_to_json"
version = "1.0.0"
description = "Application to convert Directory structure to JSON file."
readme = "README.md"
requires-python = ">=3.9,<3.13"
keywords = ["JSON Crack","JSON"]

authors = [
    {name = "Sneha Chavan", email = "snehachavanbca07@gmail.com" }
]

maintainers = [
    {name = "Sneha Chavan", email = "snehachavanbca07@gmail.com" }
]

classifiers = [  
    # Optional
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",

    # Indicate who your project is intended for
    "Intended Audience :: Everyone",
    "Topic :: JSON Crack :: Automated JSON generation",

    # Pick your license as you wish
    #"License :: OSI Approved :: MIT License",

    # Specify the Python versions you support here. In particular, ensure
    # that you indicate you support Python 3. These classifiers are *not*
    # checked by "pip install". See instead "python_requires" below.
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    # "Programming Language :: Python :: 3 :: Only",
]


[project.urls]
"source" = "https://github.com/Sneha-Chavan-95/Directory_2_JSON.git"

[project.optional-dependencies]
dev = [
    "black", 
    "flake8", 
    "mypy", 
    "pylint",
    "vulture",
]
test = [
    "pytest",
    "mypy",
    "flake8",
    "coverage",
    "pytest-cov",
    "pylint",
    "black",
    "vulture",
]

[project.scripts]
dir_to_json = "dir_to_json:main"
tracker-doc = "dir_json:dir_to_json_doc"

[tool.pytest.ini_options]
addopts = "-vv --cov --cov-report=html -p no:warnings" 
filterwarnings = "ignore::DeprecationWarning"

[tool.mypy]
ignore_missing_imports = true

[tool.vulture]
exclude = ["*/__init__.py",]
min_confidence = 70

[tool.pylint]
disable = ["line-too-long", "expression-not-assigned", "import-self"]
max-line-length = 200

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
